--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ footer #2F303A*/
  --primary-bg-color:#ffffff;
  --button-accent-color:#188CE8;
  --button-bg-color:#F5F4FA;
+ --card-set-gap:30px;
  
 
 
@@ -25,10 +26,28 @@ body{
     font-size: 14px;
     letter-spacing: 0.03em;
 }
-img {
-    display: block
+h1,
+h2,
+h3,
+p {
+    margin: 0;
 }
 
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.container{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1230px;
+    outline: 2px solid red; 
+}
 .list {
     list-style: none;
     padding: 0;
@@ -37,17 +56,6 @@ img {
 
 .link {
     text-decoration: none;
-}
-h1,h2,h3,h4,h5,h6,ul,p{
-    margin-top: 0;
-    margin-bottom: 0;
-
-}
-.container{
-    margin-left: auto;
-    margin-right: auto;
-    width: 1230px;
-    outline: 2px solid red; 
 }
 
 
@@ -105,9 +113,10 @@ h1,h2,h3,h4,h5,h6,ul,p{
 /* site-nav */
 
 .box{
+    justify-content: space-between;
 
 display: flex;
-width: 1600px;
+/* width: 1600px; */
 height: 80px;
 }
 
@@ -119,8 +128,8 @@ height: 80px;
 }
 .contacts{
     display: flex;
-    align-items: center;
-    margin-left: 344px;
+align-items: center;
+    /* margin-left: 344px; */
    
 }
 
@@ -222,8 +231,17 @@ height: 80px;
 }
 
 /* features */
+.section-features{
+margin-bottom: 94px;
+padding-right: 15px;
+padding-left: 15px;
 
+}
 .features{
+    display: flex;
+    flex-wrap: wrap;
+
+
     background-color: var(--primary-bg-color);
     outline: 2px solid red;
 }
@@ -234,23 +252,92 @@ height: 80px;
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 1.17;
     text-transform: uppercase;
    
 }
 .features-text{
+    font-weight:normal;
+    font-size: 14px;
     line-height: 1.7;
+    letter-spacing: 0.3;
+}
+.features .item{
+margin-right: 30px;
+width: 270px;
 }
 
 /* works */
+.section-works{
+
+margin-bottom: 80px;
+
+background-color: var(--primary-bg-color);
+}
+
+
+.works-title{
+    margin-bottom: 50px;
+
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+.works-list{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 1200px;
+    
+}
+.works-list .item{
+    margin-right: 30px;
+   flex-basis: calc(100% / 3 - var(--card-set-gap));
+}
+.works-list .item:last-child{
+    margin-right: 0px;
+}
+
+
 
 
 /* our team  */
+.team-spec{
+/* margin-left: auto;
+margin-right: auto; */
+
+background-color: #F5F4FA;
+}
 
 .section-team{
-    background-color:#F5F4FA;
+background-color: #F5F4FA;
 }
+.employee{
+display: flex;
+flex-wrap: wrap;
+
+
+}
+
+.employee:last-child{
+    margin-right: 0;
+}
+
+.employee .item{
+margin-bottom: 30px;
+margin-right: 30px;
+flex-basis: calc(100% / 4 - 30px);
+}
+
+
 .team-title{
+    margin-bottom: 10px;
+    padding-right: 70px;
+    padding-left: 70px;
+    
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -291,9 +378,32 @@ height: 80px;
 
 
 /* portfolio select section */
+
+
 .select-menu{
+display: flex;
+justify-content: center;
+
     background-color: #ffffff;
 }
+.select-menu-img .list{
+    display: flex;
+    flex-wrap: wrap;
+
+    background-color: #ffffff;
+}
+.img-list{
+    width: 370px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
+.img-list:last-child(3n){
+    margin-right: 0;
+}
+.img-list:nth-child(-n + 3){
+    margin-bottom: 0;
+}
+
 .select-link{
     background-color: #EEEEEE;
 }
@@ -305,7 +415,10 @@ height: 80px;
     color: var(--accent-color);
 }
 .select-link {
-    color: var(--title-text-color)
+    color: var(--title-text-color);
+    width: 370px;
+    
+   
 }
 /* portfolio projects */
 
@@ -323,7 +436,12 @@ height: 80px;
     letter-spacing: 0.03em;
 }
 .select-button{
-    color: #212121;
+    width: 125px;
+    border-color: transparent;
+    height: 38px;
+    margin-left: 8px;
+    margin-bottom: 34px;
+
     background-color:var(--button-bg-color);
     font-family: inherit;
     font-weight: 500;
@@ -334,16 +452,27 @@ height: 80px;
 
     cursor: pointer;
 }
+.select-button :last-child{
+    margin-right: 0;
+}
+
 .select-button:hover,
 .select-button:focus{
     color:var(--button-bg-color);
     background-color: var(--button-accent-color)
 }
 
+
+.portfolio-text{
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+}
+
 /* footer */
 .box-footer {
     padding-top: 20px;
-    width: 1600px;
+    /* width: 1600px; */
     height: 252px;
 }
 
