--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ ol {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 /* .list {
 
@@ -280,6 +280,7 @@ padding-left: 15px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  padding-bottom: 94px;
 }
 
 .employee .item {
@@ -299,7 +300,7 @@ padding-left: 15px;
 }
 
 .team-title {
-  margin-top: 30px;
+  padding-top: 30px;
   margin-bottom: 10px;
 
   color: var(--title-text-color);
@@ -321,18 +322,34 @@ padding-left: 15px;
 .team-style-first {
   padding-right: 69px;
   padding-left: 69px;
+  border-right: 1px solid #757575;
+  border-left: 1px solid #757575;
+  border-bottom: 1px solid #757575;
+  border-radius: 4px;
 }
 .team-style-second {
   padding-right: 62px;
   padding-left: 61px;
+  border-right: 1px solid #757575;
+  border-left: 1px solid #757575;
+  border-bottom: 1px solid #757575;
+  border-radius: 4px;
 }
 .team-style-third {
   padding-right: 69px;
   padding-left: 69px;
+  border-right: 1px solid #757575;
+  border-left: 1px solid #757575;
+  border-bottom: 1px solid #757575;
+  border-radius: 4px;
 }
 .team-style-fourth {
   padding-right: 61px;
   padding-left: 61px;
+  border-right: 1px solid #757575;
+  border-left: 1px solid #757575;
+  border-bottom: 1px solid #757575;
+  border-radius: 4px;
 }
 
 /* ===========portfolio select section========== */
@@ -418,7 +435,11 @@ padding-left: 15px;
   padding-left: 24px;
   padding-right: 24px;
   padding-bottom: 20px;
-  margin-top: 20px;
+  padding-top: 20px;
+
+  border-right: 1px solid #ececec;
+  border-left: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 /* =================footer================= */
