--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ ol {
   clip-path: inset(50%);
   margin: -1px;
 }
+.page-header {
+  border: 1px solid #ececec;
+  margin-bottom: 5px;
+}
 
 /* =====================site-nav=================== */
 
@@ -176,13 +180,15 @@ ol {
 
 /* ==================hero================== */
 .hero {
-  outline: 2px solid red;
+  height: 600px;
+
+  /* outline: 2px solid red; */
   background-color: #2f303a;
   text-align: center;
 }
 .hero-title {
-  margin-top: 0;
-  margin-bottom: 30;
+  padding-top: 200px;
+  margin-bottom: 30px;
 
   color: #ffffff;
   font-weight: 900;
@@ -207,6 +213,8 @@ ol {
   letter-spacing: 0.06em;
   cursor: pointer;
   align-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 4px;
 }
 
 /* ============features============= */
@@ -322,34 +330,42 @@ padding-left: 15px;
 .team-style-first {
   padding-right: 69px;
   padding-left: 69px;
-  border-right: 1px solid #757575;
-  border-left: 1px solid #757575;
-  border-bottom: 1px solid #757575;
-  border-radius: 4px;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-style-second {
   padding-right: 62px;
   padding-left: 61px;
-  border-right: 1px solid #757575;
-  border-left: 1px solid #757575;
-  border-bottom: 1px solid #757575;
-  border-radius: 4px;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-style-third {
   padding-right: 69px;
   padding-left: 69px;
-  border-right: 1px solid #757575;
-  border-left: 1px solid #757575;
-  border-bottom: 1px solid #757575;
-  border-radius: 4px;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-style-fourth {
   padding-right: 61px;
   padding-left: 61px;
-  border-right: 1px solid #757575;
-  border-left: 1px solid #757575;
-  border-bottom: 1px solid #757575;
-  border-radius: 4px;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /* ===========portfolio select section========== */
@@ -437,9 +453,9 @@ padding-left: 15px;
   padding-bottom: 20px;
   padding-top: 20px;
 
-  border-right: 1px solid #ececec;
-  border-left: 1px solid #ececec;
-  border-bottom: 1px solid #ececec;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 
 /* =================footer================= */
