team-card-shadow-changes

--- a/css/style.css
+++ b/css/style.css
@@ -299,12 +299,16 @@ padding-left: 15px;
   margin-left: var(--card-set-gap);
   margin-top: var(--card-set-gap);
 }
-.card {
-  box-shadow: var(--card-shadow);
-  border-radius: 4px;
-  overflow: hidden;
-}
 
+.team-style {
+  background-color: #ffffff;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
 .main-team-title {
   margin-bottom: 50px;
   padding-top: 94px;
