--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,8 @@ padding-left: 15px;
 .select-menu {
   display: flex;
   justify-content: center;
-  padding-top: 94px;
+  gap: 8px;
+  /* padding-top: 94px; */
 
   background-color: #ffffff;
 }
@@ -397,11 +398,10 @@ padding-left: 15px;
   letter-spacing: 0.03em;
 }
 .select-button {
-  width: 125px;
-  border-color: transparent;
-  height: 38px;
-  margin-left: 8px;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
+  padding: 6px 22px;
+  border: none;
+  border-radius: 4px;
 
   background-color: var(--button-bg-color);
   font-family: inherit;
@@ -413,9 +413,6 @@ padding-left: 15px;
 
   cursor: pointer;
 }
-.select-button :last-child {
-  margin-right: 0;
-}
 
 .select-button:hover,
 .select-button:focus {
@@ -424,10 +421,9 @@ padding-left: 15px;
 }
 
 .portfolio-text {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding: 20px 24px;
+
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
