--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ ol {
   text-align: center;
 }
 .hero-title {
+  width: 696px;
+  margin: 0 auto;
   margin-bottom: 30px;
 
   color: #ffffff;
@@ -223,6 +225,7 @@ ol {
   align-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 4px;
+  border: none;
 }
 
 /* ============features============= */
@@ -263,7 +266,7 @@ padding-left: 15px;
 
 /* ==================works=================== */
 .section-works {
-  background-color: var(--primary-bg-color);
+  padding-top: 0;
 }
 
 .works-title {
@@ -299,6 +302,13 @@ padding-left: 15px;
   flex-basis: calc(100% / 4 - var(--card-set-gap));
   margin-left: var(--card-set-gap);
   margin-top: var(--card-set-gap);
+
+  background: #ffffff;
+  /* material shadow v1 */
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .main-team-title {
@@ -334,13 +344,18 @@ padding-left: 15px;
 
 .team-style {
   padding: 30px 0;
-  background-color: #ffffff;
+  /* background: #FFFFFF;
+/* material shadow v1 */
+
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px; */
+  /* background-color: #ffffff;
   /* border-right: 1px solid transparent;
   border-left: 1px solid transparent;
   border-bottom: 1px solid transparent; */
-  border-radius: 0px 0px 4px 4px;
+  /* border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 2px 1px rgba(0, 0, 0, 0.2); */
 }
 
 /* ===========portfolio select section========== */
@@ -349,6 +364,7 @@ padding-left: 15px;
   display: flex;
   justify-content: center;
   gap: 8px;
+  margin-bottom: 50px;
   /* padding-top: 94px; */
 
   background-color: #ffffff;
@@ -359,7 +375,7 @@ padding-left: 15px;
   justify-content: center;
   gap: 30px;
 
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
 }
 .img-list {
   width: 370px;
@@ -398,7 +414,7 @@ padding-left: 15px;
   letter-spacing: 0.03em;
 }
 .select-button {
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
@@ -424,7 +440,7 @@ padding-left: 15px;
   padding: 20px 24px;
 
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-
+  box-sizing: border-box;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
